<resources>
    <string name="app_name">KingmedAssets</string>

    <!-- Strings related to login -->
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This Account is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="authorized_failed">Incorrect account or password</string>

    <!--main activity-->
    <string name="add">Add</string>
    <string name="query">Query</string>
    <string name="check">Check</string>
    <string name="settings">Settings</string>

    <!--settings activity-->
    <string name="user">user</string>
    <string name="current_user">Current User</string>
    <string name="scan_settings">scan settings</string>
    <string name="scan">scan</string>
</resources>
