<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/glRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2">

        <TextView
            android:id="@+id/tvAdd"
            style="@style/MainTxtIcon"
            android:layout_column="0"
            android:layout_row="0"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:text="@string/add" />

        <TextView
            android:id="@+id/tvQuery"
            style="@style/MainTxtIcon"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:drawableTop="@android:drawable/ic_menu_search"
            android:text="@string/query" />

        <TextView
            android:id="@+id/tvCheck"
            style="@style/MainTxtIcon"
            android:layout_column="0"
            android:layout_row="1"
            android:drawableTop="@android:drawable/ic_menu_agenda"
            android:text="@string/check" />

        <TextView
            android:id="@+id/tvSettings"
            style="@style/MainTxtIcon"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_row="1"
            android:drawableTop="@android:drawable/ic_menu_manage"
            android:text="@string/settings" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/glRoot"
        android:layout_marginRight="10dp"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:gravity="center_vertical"
        android:text="@string/scan" />
</RelativeLayout>